# legaldataplatform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.api  Makefile  README.md  SECURITY.md  SETUP.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  railway.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  deploy-docs.yml  docs.yml
dbt/: README.md  dbt_project.yml  profiles.yml
dbt/models/gold/: gold_counterparty_risk_distribution.sql  gold_legal_documents_by_jurisdiction.sql  gold_monthly_revenue_by_counterparty.sql  schema.yml
dbt/models/staging/: sources.yml  stg_counterparties.sql  stg_legal_documents.sql  stg_transactions.sql
deploy/: RAILWAY.md  start.sh
docs/: ARCHITECTURE.md  AWS_DEPLOYMENT.md  DATA_QUALITY.md  DEPLOY.md  INTERVIEW_SUMMARY.md  MANUAL_USO.md  MANUAL_USO_SIMPLE.html  PIPELINES.md  POSTGRESQL_OPTIMIZATION.md  TALKING_POINTS.md  WALKTHROUGH.md  demo.html  index.html  index.md  manual-uso.html  presentacion-pro.html  presentacion.html
docs/evidence/: README.md  benchmarks.md  env.md  flow_summary.md
infra/docker/: Caddyfile.example  prometheus.yml
infra/sql/init/: 01_extensions.sql  02_roles.sql
infra/terraform/: glue.tf  lambda.tf  main.tf  outputs.tf  rds.tf  s3.tf  sqs.tf  variables.tf
load_tests/: README.md  locustfile.py
notebooks/: pipeline_analysis.ipynb
scripts/: capture_benchmarks.py  capture_env.py  generate_pdfs.py  seed_data.py  setup.ps1  setup.sh
scripts/benchmarks/: query_benchmark.py
src/: __init__.py  config.py
src/api/: README.md  __init__.py  _run_flow.py  analytics.py  main.py  processor.py  schema_detector.py
src/api/templates/: log.html  upload.html
src/aws/: __init__.py
src/aws/glue_jobs/: __init__.py  legal_doc_normalize.py
src/aws/lambda_handlers/: __init__.py  s3_event_ingest.py  sqs_pipeline_trigger.py
src/aws/s3/: __init__.py  (+1 more)
src/data_quality/: __init__.py  ge_integration.py
src/database/: __init__.py  session.py
src/observability/: __init__.py  logging.py  metrics.py
src/pipelines/: __init__.py
src/schemas/: __init__.py  commercial.py  legal.py
tests/: conftest.py
tests/integration/: conftest.py  test_partitioning.py  test_postgres_bulk_loader.py  test_s3_handler.py  test_scd2.py
tests/unit/: test_enrichers.py  test_gleif.py  test_normalizers.py  test_performance_benchmarks.py  test_rule_engine.py  test_s3_handler.py  test_schemas.py  test_sec_edgar.py
(+41 files in other folders)
