[project]
name = "legaldataplatform"
version = "0.1.0"
description = "Scalable ETL/ELT platform for legal and commercial data"
authors = [{ name = "Humberto Henriquez" }]
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    # Core data processing
    "pandas>=2.2.0",
    "polars>=0.20.0",
    "pyarrow>=15.0.0",
    "numpy>=1.26.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "psycopg[binary,pool]>=3.1.18",
    "alembic>=1.13.1",

    # Validation & modeling
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",

    # Orchestration
    "prefect>=2.16.0",

    # Data Quality
    "great-expectations>=0.18.10",

    # AWS
    "boto3>=1.34.0",
    "aioboto3>=12.3.0",
    "s3fs>=2024.2.0",

    # HTTP
    "httpx>=0.27.0",
    "tenacity>=8.2.3",

    # Config & IO
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "click>=8.1.7",

    # Observability
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.23.0",
    "opentelemetry-sdk>=1.23.0",

    # Date/time
    "pendulum>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-benchmark>=4.0.0",
    "moto[s3,sqs,lambda]>=5.0.0",
    "factory-boy>=3.3.0",
    "faker>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "ipython>=8.22.0",
    "jupyter>=1.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-mermaid2-plugin>=1.1.0",
    "mkdocstrings[python]>=0.24.0",
    "pymdown-extensions>=10.7.0",
]
dbt = [
    "dbt-core>=1.7.0",
    "dbt-postgres>=1.7.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = false
no_implicit_reexport = true
check_untyped_defs = true
disallow_untyped_defs = false   # Aspirational; tighten per-module below
disallow_incomplete_defs = true

# Fully-typed modules get stricter checks
[[tool.mypy.overrides]]
module = [
    "src.schemas.*",
    "src.observability.*",
]
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"
